--- a/appletoncafesurvey/assets/style.css
+++ b/appletoncafesurvey/assets/style.css
@@ -508,4 +508,7 @@ textarea:focus {
         padding-left: 2rem;
         padding-right: 2rem;
     }
+    .final .screen {
+        overflow-y: auto;
+    }
 }
