--- a/appletoncafesurvey/assets/style.css
+++ b/appletoncafesurvey/assets/style.css
@@ -27,7 +27,7 @@ html {
     height: 100%;
     max-height: 100vh;
     overflow: hidden;
-    font-size: 18px;
+    font-size: 16px;
     background-color: var(--semi);
 }
 
@@ -47,8 +47,8 @@ html {
 }
 
 .main {
-    display: grid;
-    grid-template-rows: auto 14rem;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     position: relative;
@@ -57,12 +57,10 @@ html {
 
 .video {
     position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     width: 100%;
     border-radius: 32px;
     padding-top: 1rem;
+    height: 100%;
 }
 
 .video img {
@@ -99,7 +97,7 @@ html {
 }
 
 .star-explainer {
-    font-size: .65rem;
+    font-size: .7rem;
     margin-top: 1.2rem;
     /* color: var(--primary) */
 }
@@ -268,7 +266,7 @@ textarea:focus {
 }
 
 .start .container p {
-    font-size: .65rem;
+    font-size: .7rem;
     margin: 1rem 0;
 }
 
@@ -296,7 +294,7 @@ textarea:focus {
 
 .start .attribution, .context .attribution {
     position: absolute;
-    font-size: .65rem;
+    font-size: .7rem;
     right: 1rem;
     bottom: 1rem;
     color: var(--light);
@@ -469,7 +467,7 @@ textarea:focus {
     margin-top: 5rem;
 }
 .card .small {
-    font-size: .65rem;
+    font-size: .7rem;
 }
 .screen img {
     width: 100%;
@@ -491,6 +489,7 @@ textarea:focus {
 
     .question-container {
         width: 100%;
+        max-height: 12rem;
     }
 
     .progress-bar-container {
@@ -512,6 +511,6 @@ textarea:focus {
         overflow-y: auto;
     }
     .input {
-        padding: 1rem;
+        padding: 0 1rem;
     }
 }
